migrating frontend to work with the local backend
